## GeoTag 4.x ... (not yet released)

### Bug Fixes

* Fix display of error reason when a backup folder can not be selected

## GeoTag 4.1 includes the following.

### New Features

* Map search
* Image backup handling
* Exiftool 10.67
* MIT Software License

### Bug Fixes

* GPS info validation
* pin no longer placed when double clicking on map
* pin no longer placed when dragging map
* Changes for Swift 4.0

## GeoTag 4.0

### New Features:

* Apple maps replace Google maps
* Exiftool is now built in
* Sandboxed for better security
* Image loading is many times faster
* Currently coded in Swift 3

## GeoTag 3.5

### New Features:

* (internal) update code to use Swift 2

### Bug fixes:

* Disable App Transport Security so the maps will load in OS X 10.11
  El Capitan

* location highlighting error fixed.  When assigning a location and then
  selecting another image the latitude and longitude are re-displayed in
  the standard color.

* map search box relocated such that it no longer covers the button used
  to exit street view.

## GeoTag 3.4

### New Features:

* Folders can now be dragged and dropped into the table. All non-duplicate files
  in the folder (and sub folders) will be added to the table for geolocation
  editing.

* Folders can also now be selected in the File -> Open dialog.

* Add ⌘K as a shortcut for the Clear image list menu option.  The command
  is ignored if any of the items in the list have been edited and not saved.

* Added a GeoTag preference to select a folder where original files will be
  saved in addition to the Trash. Files in the optional save folder with the same
  name as an image to be saved will NOT be overwritten.

* GeoTag can assign locations to images by interpolating between two points.
  See the operating instructions for more info.

### Bug fixes:

* Window size and split pane locations are now saved.   Restarting GeoTag
  should use the same layout as the previous invocation.
